fix: 쿠키 도메인 추가